# spectec-core

./: .gitignore  Makefile  README.md
examples/: example.spectec
examples/STLC/: 0-stdlib.spectec  1-syntax.spectec  2-static.spectec  3-dynamic.spectec
examples/spec-il/: 0-stdlib.spectec  1-syntax.spectec  1-syntax.watsup  2.1-env.spectec  2.2-context.spectec  3-relation.watsup  4.0.1-eval-exp-aux.spectec  4.0.3-eval-prem-aux.spectec  4.0.3-eval-prem-aux.watsup  4.1-eval-exp.spectec  4.1-eval-exp.watsup  4.2-eval-arg.spectec  4.3-eval-prem.spectec  4.3-eval-prem.watsup  4.4-eval-call.spectec  4.4-eval-call.watsup
examples/total/: 1.spectec
spectec/: dune
spectec/examples/: example.spectec
spectec/examples/total/: example.spectec  example2.spectec  example3.spectec
spectec/lib/: dune  error.ml  spectec.ml  spectec.mli
spectec/lib/common/: common.ml  common.mli  diagnostic.ml  diagnostic.mli  diagnostic_render.ml  domain.ml  error.ml
spectec/lib/diagnostic/: dune  render.ml  render.mli
spectec/lib/envs/il/: typ.ml
spectec/lib/generate/: dune  generate.ml  parse_il_value.ml  parse_il_value.mli  print.ml  refactor.ml  shared_exp.ml  structure.ml
spectec/lib/instrumentation/: branch_coverage.ml  config.ml  hooks.ml  instrumentation.ml  node_coverage.ml  node_coverage_il.ml  node_coverage_sl.ml  profile.ml  trace.ml
spectec/lib/instrumentation/core/: descriptor.ml  dispatcher.ml  handler.ml  noop.ml  param_utils.ml
spectec/lib/instrumentation/handlers/: branch_coverage.ml  node_coverage_il.ml  node_coverage_sl.ml  profile.ml  trace.ml
spectec/lib/instrumentation/static/: premise_uid.ml  static.ml
spectec/lib/interp/: dune  interp.ml  interp.mli
spectec/lib/interp/builtins/: builtins.ml  dune  error.ml
spectec/lib/interp/cache/: cache.ml  dune
spectec/lib/interp/common/: cache.ml
spectec/lib/interp/eval_il/: ctx.ml  dune  error.ml  eval_il.ml  eval_il.mli  interp.ml  runner.ml
spectec/lib/interp/eval_sl/: dune  error.ml  eval_sl.ml  eval_sl.mli  interp.ml
spectec/lib/lang/el/: free.ml  print.ml  types.ml
spectec/lib/lang/il/: eq.ml  free.ml  il.ml  il.mli  print.ml  print_debug.ml  types.ml  value.ml
spectec/lib/lang/sl/: eq.ml  print.ml  types.ml
spectec/lib/pass/: dune  pass.ml  pass.mli
spectec/lib/pass/elaborate/: dune  elab.ml  elaborate.ml  elaborate.mli  error.ml
spectec/lib/pass/parse/: dune  error.ml  lexer.mll  parse.ml  parse.mli  parser.mly
spectec/lib/pass/structure/: antiunify.ml  instrument.ml  optimize.ml  renamer.ml  structure.ml
spectec/lib/runner/: checkpoint.ml  checkpoint.mli  dune  error.ml  error.mli  runner.ml  runner.mli  suite.ml  suite.mli  target.ml  task.ml
spectec/lib/semantics/: dune  semantics.ml
spectec/lib/semantics/dynamic/: dune  envs.ml  typ.ml
spectec/lib/semantics/dynamic_il/: envs.ml
spectec/lib/semantics/env/: dune  env.ml
spectec/lib/semantics/static/: dune  envs.ml  plaintyp.ml
spectec/lib/suite/: dune  suite.ml  suite.mli
spectec/lib/total/: canon_compare.ml  dune  total.ml
spectec/targets/STLC/: stlc.ml
spectec/targets/p4/: dune  p4.ml
spectec/targets/p4/frontend/: dune  frontend_p4.ml  parser.mly
spectec/test/: run_il_pos_p4c.expected  run_sl_pos_p4c.expected  test.ml
spectec/test/elab/: dune  elab.expected  main.ml
spectec/test/il/: dune  pos.expected
spectec/test/interp/: dune  main.ml  sl-neg.expected
spectec/test/lib/: exclude.ml  stats.ml  suite.ml  timer.ml
spectec/test/sl/: neg.expected  pos.expected
spectec/test/struct/: dune  main.ml  struct.expected
(+18 files in other folders)
